Homepage, cart, checkout, i, settings.py, templates modified

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -8,9 +8,6 @@
     <title>Payment Page</title>
     <!-- Include Stripe.js -->
     <script src="https://js.stripe.com/v3/"></script>
-    <script>
-        var stripePublicKey = "{{ stripe_publication_key }}";
-    </script>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -62,7 +59,6 @@
 </head>
 
 <body>
-
     <form method="POST" id="payment-form">
         {% csrf_token %}
         <h1>Payment Information</h1>
@@ -70,15 +66,49 @@
         <div id="card-element">
             <!-- A Stripe Element will be inserted here. -->
         </div>
-
         <!-- Used to display form errors. -->
         <div id="card-errors" role="alert"></div>
-
-        <button type="submit" disabled>Submit Payment</button>
-
-        <!-- Include your own scripts -->
-        <script src="{% static 'js/payment.js' %}"></script>
+        <button type="submit">Submit Payment</button>
     </form>
+    <script>
+        var stripe = Stripe("{{ stripe_publication_key }}");
+        var elements = stripe.elements();
+        var card = elements.create('card');
+        card.mount('#card-element');
+
+        card.on('change', function (event) {
+            var displayError = document.getElementById('card-errors');
+            if (event.error) {
+                displayError.textContent = event.error.message;
+            } else {
+                displayError.textContent = '';
+            }
+        });
+
+        var form = document.getElementById('payment-form');
+        form.addEventListener('submit', function (event) {
+            event.preventDefault();
+
+            stripe.createToken(card).then(function (result) {
+                if (result.error) {
+                    var errorElement = document.getElementById('card-errors');
+                    errorElement.textContent = result.error.message;
+                } else {
+                    stripeTokenHandler(result.token);
+                }
+            });
+        });
+
+        function stripeTokenHandler(token) {
+            var form = document.getElementById('payment-form');
+            var hiddenInput = document.createElement('input');
+            hiddenInput.setAttribute('type', 'hidden');
+            hiddenInput.setAttribute('name', 'stripeToken');
+            hiddenInput.setAttribute('value', token.id);
+            form.appendChild(hiddenInput);
+            form.submit();
+        }
+    </script>
 </body>
 
 </html>
