--- a/templates/cart.html
+++ b/templates/cart.html
@@ -10,7 +10,7 @@
                 <div class="col-md-8">
                     <div class="card mb-4">
                         <div class="card-header py-3">
-                            <h5 class="mb-0">Cart - {{cart_items.count}} items</h5>
+                            <h5 class="mb-0">Cart - {{cart_items}} Unique items</h5>
                         </div>
                         <div class="card-body">
                             {% for item in results %}
@@ -145,11 +145,15 @@
                                 <li
                                     class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                                     Sub-Total
-                                    <span>${{cart.total}}</span>
+                                    <span>${{sub_total}}</span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                     Shipping
                                     <span>Gratis</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                    Tax
+                                    <span>$ 53</span>
                                 </li>
                                 <li
                                     class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
@@ -159,7 +163,7 @@
                                             <p class="mb-0">(including VAT)</p>
                                         </strong>
                                     </div>
-                                    <span><strong>${{tax}}</strong></span>
+                                    <span><strong>${{total_amount}}</strong></span>
                                 </li>
                             </ul>
                             {% if request.user.user_type == 'CUSTOMER' %}
