--- a/templates/list_of_products_for_update.html
+++ b/templates/list_of_products_for_update.html
@@ -379,13 +379,13 @@
                                                 </div>
                                                 <div class="modal-body">
                                                     <!-- Confirmation message -->
-                                                    <p>Are you sure you want to delete this comment?</p>
+                                                    <p>Are you sure you want to delete this Product?</p>
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-danger"
                                                         data-bs-dismiss="modal">Cancel</button>
                                                     <a href="{% url 'i:delete_monitor' product_id=monitor.monitor_id %}"
-                                                        class="btn btn-primary">Delete Comment</a>
+                                                        class="btn btn-primary">Delete Product</a>
                                                 </div>
                                             </div>
                                         </div>
