--- a/templates/subcategory_form.html
+++ b/templates/subcategory_form.html
@@ -1,15 +1,8 @@
 {% load static %}
-{# Load the tag library #}
 {% load django_bootstrap5 %}
-{# Load CSS and JavaScript #}
 {% bootstrap_css %}
-{%bootstrap_javascript %}
-{# Display django.contrib.messages asBootstrapalerts#}
+{% bootstrap_javascript %}
 {% bootstrap_messages %}
-{# Display a form #}
-
-
-
 
 {% if form %}
 <form hx-post="{% url 'i:load_subsubcategory_form' %}" hx-target="#sub-product-container" hx-trigger="change">
@@ -17,24 +10,25 @@
     {% bootstrap_form form %}
 </form>
 
-
-
-
-<div id="sub-product-container">
-
-
-</div>
+<div id="sub-product-container"></div>
 
 {% else %}
-
 <div style="margin-top: 21px; margin-bottom:41px; width: 500px;">
-    <form hx-post="{% url 'book_:create_update_book_formats' %}" enctype="multipart/form-data">
+    <form enctype="multipart/form-data" hx-post="{% url 'book_:create_update_book_formats' %}">
         {% csrf_token %}
         {% bootstrap_form book_author_name_form %}
         {% bootstrap_form book_format_form %}
+        {% if book_author_name_form.errors %}
+        <div class="alert alert-danger">
+            {{ book_author_name_form.errors }}
+        </div>
+        {% endif %}
+        {% if book_format_form.errors %}
+        <div class="alert alert-danger">
+            {{ book_format_form.errors }}
+        </div>
+        {% endif %}
         {% bootstrap_button type="submit" content="Submit" style="width:500px;" %}
     </form>
-
 </div>
-
 {% endif %}
