--- a/templates/password_reset_confirm.html
+++ b/templates/password_reset_confirm.html
@@ -1,24 +1,23 @@
 {% extends 'main.html' %}
- {% load static %} 
- {# Load the tag library #}
+{% load static %}
+{# Load the tag library #}
 {% load django_bootstrap5 %}
- {# Load CSS and JavaScript #}
+{# Load CSS and JavaScript #}
 {% bootstrap_css %}
 {%bootstrap_javascript %}
- {# Display django.contrib.messages asBootstrapalerts#}
-{% bootstrap_messages %} 
+{# Display django.contrib.messages asBootstrapalerts#}
+{% bootstrap_messages %}
 {# Display a form #}
 
 {% block content %}
-    <form method="post" class="form" style="width:500px; margin-left:150px; margin-top:41px; 
-    margin-bottom:41px;">
-        {% csrf_token %}
+<form method="post" class="form" style="width:500px; margin-left:150px; margin-top:41px; margin-bottom:41px;">
+    {% csrf_token %}
 
-        {% bootstrap_form form %}
+    {% bootstrap_form form %}
 
-   
-        {% bootstrap_button button_type="submit" content="Submit" style="width:500px;"  %}
-    
 
-    </form>
+    {% bootstrap_button button_type="submit" content="Submit" style="width:500px;" %}
+
+
+</form>
 {% endblock content %}
