learn the template structure and static files

--- a/templates/admin_search_results_my_posts.html
+++ b/templates/admin_search_results_my_posts.html
@@ -66,7 +66,7 @@
 <div style="margin-left:101px; margin-top:101px;">
     <span style="font-size: larger;">No blog post with search:<strong> {{search}}</strong> and status:
         <strong>{{status}}</strong>
-        query exist
+        exist
     </span>
 </div>
 {% endif %}
